--- a/views/people_pulse_sales_pipeline_view.yml
+++ b/views/people_pulse_sales_pipeline_view.yml
@@ -9,162 +9,162 @@ model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_SALES_PIPELINE
 default_date: expected_close_date
 identifiers:
-  - name: sales_rep_id
-    type: foreign
-    sql: ${sales_rep_id}
-  - name: product_id
-    type: foreign
-    sql: ${product_id}
+- name: sales_rep_id
+  type: foreign
+  sql: ${sales_rep_id}
+- name: product_id
+  type: foreign
+  sql: ${product_id}
 fields:
-  - name: sales_rep_id
-    field_type: dimension
-    type: number
-    sql: ${TABLE}."SALES_REP_ID"
+- name: sales_rep_id
+  field_type: dimension
+  type: number
+  sql: ${TABLE}."SALES_REP_ID"
 
-  - name: opportunity
-    field_type: dimension
-    type: string
-    sql: ${TABLE}."OPPORTUNITY"
-    searchable: true
+- name: product_id
+  field_type: dimension
+  type: string
+  hidden: true
 
-  - name: channel
-    field_type: dimension
-    type: string
-    sql: ${TABLE}."CHANNEL"
-    searchable: true
+  sql: ${TABLE}."PRODUCT_ID"
+- name: opportunity
+  field_type: dimension
+  type: string
+  sql: ${TABLE}."OPPORTUNITY"
+  searchable: true
 
-  - name: source
-    field_type: dimension
-    type: string
-    sql: ${TABLE}."SOURCE"
-    searchable: true
+- name: channel
+  field_type: dimension
+  type: string
+  sql: ${TABLE}."CHANNEL"
+  searchable: true
 
-  - name: campaign
-    field_type: dimension
-    type: string
-    sql: ${TABLE}."CAMPAIGN"
-    searchable: true
+- name: source
+  field_type: dimension
+  type: string
+  sql: ${TABLE}."SOURCE"
+  searchable: true
 
-  - name: lead
-    field_type: dimension
-    type: string
-    sql: ${TABLE}."LEAD"
-    searchable: true
+- name: campaign
+  field_type: dimension
+  type: string
+  sql: ${TABLE}."CAMPAIGN"
+  searchable: true
 
-  - name: stage
-    field_type: dimension
-    type: string
-    sql: >-
-      case when ${TABLE}."STAGE" in ('Proposal', 'Lead Generation') then 'MQL'
-      when ${TABLE}."STAGE" = 'Qualification' then 'Demo' when ${TABLE}."STAGE"
-      = 'Initial Contact' then 'Qualified Opportunity' when ${TABLE}."STAGE" =
-      'Negotiation' then 'Pilot' when ${TABLE}."STAGE" = 'Meeting' then
-      'Decision & Compliance' else ${TABLE}."STAGE" end
-    searchable: true
+- name: lead
+  field_type: dimension
+  type: string
+  sql: ${TABLE}."LEAD"
+  searchable: true
 
-  - name: probability_to_close
-    field_type: dimension
-    type: number
-    sql: ${TABLE}."PROBABILITY_TO_CLOSE"
+- name: stage
+  field_type: dimension
+  type: string
+  sql: >-
+    case when ${TABLE}."STAGE" in ('Proposal', 'Lead Generation') then 'MQL'
+    when ${TABLE}."STAGE" = 'Qualification' then 'Demo' when ${TABLE}."STAGE"
+    = 'Initial Contact' then 'Qualified Opportunity' when ${TABLE}."STAGE" =
+    'Negotiation' then 'Pilot' when ${TABLE}."STAGE" = 'Meeting' then
+    'Decision & Compliance' else ${TABLE}."STAGE" end
+  searchable: true
 
-  - name: product_id
-    field_type: dimension
-    type: string
-    sql: ${TABLE}."PRODUCT_ID"
-    hidden: yes
+- name: probability_to_close
+  field_type: dimension
+  type: number
+  sql: ${TABLE}."PROBABILITY_TO_CLOSE"
 
-  - name: product
-    field_type: dimension
-    type: string
-    sql: ${TABLE}."PRODUCT"
-    hidden: yes
+- name: product
+  field_type: dimension
+  type: string
+  hidden: true
 
-  - name: deal_size
-    field_type: dimension
-    type: number
-    sql: ${TABLE}."DEAL_SIZE" * 0.15
+  sql: ${TABLE}."PRODUCT"
+- name: deal_size
+  field_type: dimension
+  type: number
+  sql: ${TABLE}."DEAL_SIZE" * 0.15
 
-  - name: expected_close_date
-    field_type: dimension_group
-    type: time
-    datatype: timestamp
-    timeframes:
-      - raw
-      - date
-      - day_of_year
-      - week
-      - week_of_year
-      - month
-      - month_of_year
-      - fiscal_month
-      - fiscal_quarter
-      - fiscal_quarter_of_year
-      - fiscal_year
-      - year
-    sql: ${TABLE}."EXPECTED_CLOSE_DATE"
+- name: expected_close_date
+  field_type: dimension_group
+  type: time
+  datatype: timestamp
+  timeframes:
+  - raw
+  - date
+  - day_of_year
+  - week
+  - week_of_year
+  - month
+  - month_of_year
+  - fiscal_month
+  - fiscal_quarter
+  - fiscal_quarter_of_year
+  - fiscal_year
+  - year
+  sql: ${TABLE}."EXPECTED_CLOSE_DATE"
 
-  - name: total_deal_size
-    field_type: measure
-    type: sum
-    description: The sum of the deal sizes for all opportunities.
-    sql: ${deal_size}
-    value_format_name: usd
+- name: total_deal_size
+  field_type: measure
+  type: sum
+  description: The sum of the deal sizes for all opportunities.
+  value_format_name: usd
 
-  - name: average_deal_size
-    field_type: measure
-    type: average
-    description: The average size of deals across all opportunities.
-    sql: ${deal_size}
-    value_format_name: usd
+  sql: ${deal_size}
+- name: average_deal_size
+  field_type: measure
+  type: average
+  description: The average size of deals across all opportunities.
+  value_format_name: usd
 
-  - name: count_opportunities
-    field_type: measure
-    type: count
-    description: The total number of opportunities in the pipeline.
-    sql: ${opportunity}
-    value_format_name: decimal_0
+  sql: ${deal_size}
+- name: count_opportunities
+  field_type: measure
+  type: count
+  description: The total number of opportunities in the pipeline.
+  value_format_name: decimal_0
 
-  - name: weighted_deal_value
-    field_type: measure
-    type: number
-    description: >-
-      The total deal size weighted by the probability to close for each
-      opportunity.
-    sql: ${deal_size} * ${probability_to_close} / 100
-    value_format_name: usd
+  sql: ${opportunity}
+- name: weighted_deal_value
+  field_type: measure
+  type: number
+  description: >-
+    The total deal size weighted by the probability to close for each
+    opportunity.
+  value_format_name: usd
 
-  - name: closed_won_usd
-    field_type: measure
-    type: sum
-    description: The total dollars for deals that have been won (closed and successful).
-    sql: ${deal_size}
-    filters:
-      - field: stage
-        value: Closed Won
-    value_format_name: usd
+  sql: ${deal_size} * ${probability_to_close} / 100
+- name: closed_won_usd
+  field_type: measure
+  type: sum
+  description: The total dollars for deals that have been won (closed and successful).
+  value_format_name: usd
 
-  - name: count_won_opportunities
-    field_type: measure
-    type: count
-    description: The number of opportunities that have been won (closed and successful).
-    sql: ${opportunity}
-    filters:
-      - field: stage
-        value: Closed Won
-    value_format_name: decimal_0
+  sql: ${deal_size}
+  filters:
+  - field: stage
+    value: Closed Won
+- name: count_won_opportunities
+  field_type: measure
+  type: count
+  description: The number of opportunities that have been won (closed and successful).
+  value_format_name: decimal_0
 
-  - name: count_lost_opportunities
-    field_type: measure
-    type: count
-    description: The number of opportunities that have been lost (closed and unsuccessful).
-    sql: ${opportunity}
-    filters:
-      - field: stage
-        value: Closed Lost
-    value_format_name: decimal_0
+  sql: ${opportunity}
+  filters:
+  - field: stage
+    value: Closed Won
+- name: count_lost_opportunities
+  field_type: measure
+  type: count
+  description: The number of opportunities that have been lost (closed and unsuccessful).
+  value_format_name: decimal_0
 
-  - name: average_probability_to_close
-    field_type: measure
-    type: average
-    description: The average probability to close across all opportunities.
-    sql: ${probability_to_close}
+  sql: ${opportunity}
+  filters:
+  - field: stage
+    value: Closed Lost
+- name: average_probability_to_close
+  field_type: measure
+  type: average
+  description: The average probability to close across all opportunities.
+  sql: ${probability_to_close}
