--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -23,6 +23,12 @@ fields:
     hidden: true
     sql: ${TABLE}."ANNUAL_REVENUE"
 
+  - name: annual_revenue_dupe
+    field_type: dimension
+    type: number
+    hidden: true
+    sql: ${TABLE}."ANNUAL_REVENUE"
+
   - name: contact_email
     field_type: dimension
     type: string
